--- a/Trialis/Trialis.csproj
+++ b/Trialis/Trialis.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <Folder Include="Controllers\" />
+      <Folder Include="Domain\Services\" />
     </ItemGroup>
 
 </Project>
